Fix dark mode not toggling correctly on load

--- a/src/components/atoms/card/_index.scss
+++ b/src/components/atoms/card/_index.scss
@@ -8,7 +8,7 @@
 }
 
 // Dark mode colors
-.page-container.dark {
+.dark {
   --card-back-color: #1A1D21;
   --card-title-color: #E1ECF4;
   --card-fore-color: #FCFCFD;
