--- a/src/components/atoms/pageBackdrop/_index.scss
+++ b/src/components/atoms/pageBackdrop/_index.scss
@@ -24,7 +24,7 @@
   }
 }
 
-.page-container.dark {
+.dark {
 
   .page-graphic {
 
