--- a/src/components/atoms/toggle/_index.scss
+++ b/src/components/atoms/toggle/_index.scss
@@ -7,7 +7,7 @@
   --toggle-back-color-active: #bebffe;
 }
 
-.page-container.dark {
+.dark {
   --toggle-fore-color: #cfcfcf;
   --toggle-fore-color-active: #bebffe;
   --toggle-back-color: #45464f;
