--- a/src/components/molecules/search/_index.scss
+++ b/src/components/molecules/search/_index.scss
@@ -13,7 +13,7 @@
 }
 
 // Dark mode colors
-.page-container.dark {
+.dark {
   --search-back-color: #31343f;
   --search-button-back-color: #1f2129;
   --search-button-fore-color: #c3c6d0;
