--- a/src/components/organisms/shell/_index.scss
+++ b/src/components/organisms/shell/_index.scss
@@ -8,7 +8,7 @@
 }
 
 // Dark mode colors
-.page-container.dark {
+.dark {
   --nav-bar-back-color: #060709;
   --nav-bar-border-color: #12151C;
   --nav-bar-title-color: #ffffff;
