--- a/src/components/organisms/snippetCard/blogSnippetCard/_index.scss
+++ b/src/components/organisms/snippetCard/blogSnippetCard/_index.scss
@@ -9,7 +9,7 @@
   --blog-image-credit-link-color:  #6DC7FD;
 }
 
-.page-container.dark {
+.dark {
   --blog-quote-border-color: #8697c1;
   --table-border-color: #454545;
 }
